--- a/sedona/css/style.css
+++ b/sedona/css/style.css
@@ -18,38 +18,38 @@
   }
 }
 */
- 
+
  [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "symbols-sedona";
   font-style: normal;
   font-weight: normal;
   speak: none;
- 
+
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
- 
+
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
-     
+
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
- 
+
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
   margin-left: .2em;
- 
+
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
- 
+
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
- 
+
 .icon-facebook:before { content: '\66'; } /* 'f' */
 .icon-twitter:before { content: '\74'; } /* 't' */
 .icon-up-dir:before { content: '\25b2'; } /* '▲' */
@@ -195,6 +195,13 @@ h2 {
 
 .main-navigation .active:active {
 	color: #d6d0cc;
+}
+
+.main-navigation .disabled-link,
+.main-navigation .disabled-link:hover,
+.main-navigation .disabled-link:active {
+  color: #d2d2d2;
+  cursor: default;
 }
 
 .header-logo {
@@ -640,7 +647,7 @@ h2 {
 .filter-block .column {
 	display: inline-block;
 	vertical-align: top;
-	min-height: 215px; 
+	min-height: 215px;
 	padding-top: 28px;
 }
 
