--- a/Test_work/style.css
+++ b/Test_work/style.css
@@ -129,6 +129,7 @@ body {
     bottom: 0;
     width: 100%;
     height: 60px;
+    padding: 0;
     border: none;
     background-color: #00a0ff;
     background-image: url('img/submit.png');
@@ -137,16 +138,34 @@ body {
     background-position: 40px 50%;
 }
 
-.submit p {
+.submit a {
+    padding-right: 40px;
+    box-sizing: border-box;
     color: #fff;
     text-align: right;
-    margin-right: 35px;
+    padding: 22px 0;
+    padding-right: 40px;
+    display: inline-block;
+    text-decoration: none;
+    width: 100%;
     font-size: 13px;
     font-weight: 700;
     font-family: 'Karla', "Arial", sans-serif;
 }
 
+.main-page-link {
+    padding: 17px 20px;
+    width: 7px;
+    height: 10px;
+    background-image: url('img/back.png');
+    background-position: center;
+    background-size: 7px;
+    background-repeat: no-repeat;
+}
+
 .dialog-title {
+    display: inline-block;
+    width: 280px;
     text-align: center;
     font-size: 17px;
     font-weight: 400;
