--- a/soulvibes/sass/blocks/event.scss
+++ b/soulvibes/sass/blocks/event.scss
@@ -65,3 +65,36 @@
   margin: 0;
   padding-left: 5px;
 }
+
+
+@media (max-width: 979px) {
+  .event {
+    padding-top: 25px;
+    padding-bottom: 15px;
+  }
+  
+  .event__time {
+    font-size: 12px;
+    margin-bottom: 10px;
+
+    span {
+      margin-right: 5px;
+    }
+
+    span:after {
+      padding-left: 5px;
+      font-size: 12px;
+    }
+  }
+
+  .event__name {
+    font-size: 36px;
+    margin-bottom: 10px;
+  }
+
+  .event__name-of-location,
+  .event__location {
+    font-size: 12px;
+    line-height: 20px;
+  }
+}
