--- a/soulvibes/sass/blocks/logo.scss
+++ b/soulvibes/sass/blocks/logo.scss
@@ -6,3 +6,11 @@
     opacity: .5;
   }
 }
+
+@media (max-width: 659px) {
+  .logo {
+    display: flex;
+    justify-content: space-between;
+    width: 280px;
+  }
+}
