--- a/soulvibes/sass/blocks/section.scss
+++ b/soulvibes/sass/blocks/section.scss
@@ -28,3 +28,20 @@
     background: #dddddd;
   }
 }
+
+@media (max-width: 979px) {
+  .section__title {
+    font-size: 28px;
+    margin: 36px 0;
+
+    &:before {
+      top: 11px;
+    }
+  }
+}
+
+@media (max-width: 659px) {
+  .section__title {
+    margin: 30px 0;
+  }
+}
