--- a/test-site/style.css
+++ b/test-site/style.css
@@ -1,22 +1,60 @@
+html, body {
+  height: 100%;
+}
 body {
   font-family: sans-serif;
   line-height: 1.5;
-
-  background-color: #f9f9f9;
+  background-color: #000;
   color: #333333;
-
-  width: 980px;
   margin: 0 auto;
 }
 
-h1 {
-  text-align: center;
-  font-size: 36px;
-  margin-bottom: 0;
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+  flex-grow: 1;
+}
+.cover {
+  position: absolute;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  background: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-main > h2 {
-  text-align: center;
-  font-size: 25px;
-  border-bottom: 2px solid #e3e3e3;
+.play {
+  font-family: "Verdana", sans-serif;
+  font-size: 32px;
+}
+
+@keyframes rotate-racoon {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(-180deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
+
+.img-button {
+  background: transparent;
+  border: none;
+}
+
+.racoon-picture {
+  animation: rotate-racoon 3s linear infinite running;
+  height: 300px;
+  width: 300px;
+} 
+
+.hide {
+  display: none;
 }
